--- a/Frontend/src/app/components/pages/home/home.component.html
+++ b/Frontend/src/app/components/pages/home/home.component.html
@@ -72,8 +72,14 @@
     alt=""
     [routerLink]="['/guardadas']"
   />
-  <img src="assets/images/icons/Add_New.png" alt="" class="add-new-icon" (click)="crearPublicacion()" />
+  <img
+    src="assets/images/icons/Add_New.png"
+    alt=""
+    class="add-new-icon"
+    (click)="crearPublicacion()"
+  />
   <img src="assets/images/icons/chat.png" alt="" [routerLink]="['/mensajes']" />
+  <img src="assets/images/icons/heart.png" alt="" [routerLink]="['/home']" />
 </div>
 
 <!-- Suggestions -->
