--- a/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
+++ b/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid #999; /* Opcional */
-  margin: 25px auto; /* Opcional */
+  /* margin: 25px auto; */ /* Opcional */
+  margin: 0px;
   width: 37rem;
   height: 34rem;
   border-radius: 20px;
