--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.css
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.css
@@ -1,7 +1,7 @@
 /* Back */
 .back {
   margin-left: 1rem;
-  margin-top: 1rem;
+  margin-top: 0px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -24,6 +24,7 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .flex-item-1,
@@ -121,7 +122,7 @@ textarea {
   border: 0px;
   padding: 15px;
   outline-width: 0px;
-  background: var(--background-color);
+  background: transparent;
   font-family: var(--secondary-font);
   font-size: large;
 }
