--- a/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
+++ b/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #999; /* Opcional */
+  /* border: 1px solid #999; */ /* Opcional */
   /* margin: 25px auto; */ /* Opcional */
   margin: 0px;
   width: 37rem;
