--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
@@ -11,7 +11,8 @@
 
   <div class="flex-container">
     <div class="flex-item-1">
-      <img src="assets/images/crear-publicacion.png" alt="" class="img-post" />
+      <!-- <img src="assets/images/crear-publicacion.png" alt="" class="img-post" /> -->
+      <img [src]="previsualizacion" alt="" class="img-post" />
       <div class="location">
         <img src="assets/images/icons/location.png" alt="" />
         <span>Añadir ubicación</span>
