--- a/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
+++ b/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
@@ -9,6 +9,16 @@
   height: 34rem;
   border-radius: 20px;
 }
+.drop_zone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px dashed #666;
+  border-radius: 10px;
+  margin-top: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
 h2 {
   margin-top: 40px;
   font-style: normal;
