CrearPublicacion: definida la drop zone

--- a/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.html
+++ b/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h2>Crear publicación</h2>
   <div class="linea-horizontal"></div>
-  <div class="drop_zone" (drop)="dropHandler($event)">
+  <div class="drop_zone">
     <img src="assets/images/icons/Vector.png" alt="">
     <p>Arrastra aquí una foto</p>
   </div>
