CrearPublicacion1: Drop Zone implemented

--- a/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
+++ b/Frontend/src/app/components/pages/components/crear-publicacion/crear-publicacion.component.css
@@ -9,7 +9,7 @@
   height: 34rem;
   border-radius: 20px;
 }
-.drop_zone {
+ngx-dropzone {
   display: flex;
   flex-direction: column;
   align-items: center;
