CrearPublicacion1: back button

--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Back -->
-  <div class="back">
+  <div class="back" (click)="goToCrearPublicacion()">
     <img src="assets/images/icons/left_arrow.png" alt="" /><span
       >Crear una nueva publicación</span
     >
