HeaderComponent: user recibido desde el home

--- a/Frontend/src/app/components/pages/home/home.component.html
+++ b/Frontend/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<app-header></app-header>
+<app-header [user]="currentUser"></app-header>
 
 <!-- Post 1 -->
 <div class="posts-container">
