--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.css
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.css
@@ -105,9 +105,10 @@
 }
 
 .user-information img {
-  width: 80px;
-  height: 80px;
+  width: 75px;
+  height: 75px;
   border-radius: 100%;
+  object-fit: cover;
 }
 
 .user-information span {
