--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
@@ -28,8 +28,8 @@
           <img [src]="currentUser.img" alt="" />
           <span>@{{currentUser.username}}</span>
         </div>
-        <textarea placeholder="Escribe el pie de foto..."></textarea>
-        <span class="character-limit">0/400</span>
+        <textarea placeholder="Escribe el pie de foto..." #comentario maxlength="400"></textarea>
+        <span class="character-limit">{{comentario.value.length? comentario.value.length + 1 : 0 || 0}}/400</span>
       </div>
       <div class="actions">
         <button class="omitir">Omitir</button>
