--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
@@ -32,7 +32,7 @@
         <span class="character-limit">{{comentario.value.length? comentario.value.length + 1 : 0 || 0}}/400</span>
       </div>
       <div class="actions">
-        <button class="omitir">Omitir</button>
+        <button class="omitir" (click)="omitir()">Omitir</button>
         <button class="publicar">Publicar</button>
       </div>
     </div>
