--- a/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
+++ b/Frontend/src/app/components/pages/components/crear-publicacion1/crear-publicacion1.component.html
@@ -29,7 +29,7 @@
           <span>@{{currentUser.username}}</span>
         </div>
         <textarea placeholder="Escribe el pie de foto..." #comentario maxlength="400" [(ngModel)]="description"></textarea>
-        <span class="character-limit">{{comentario.value.length? comentario.value.length + 1 : 0 || 0}}/400</span>
+        <span class="character-limit">{{comentario.value.length? comentario.value.length : 0}}/400</span>
       </div>
       <div class="actions">
         <button class="omitir" (click)="omitir()">Omitir</button>
