--- a/Frontend/src/app/components/editar-perfil/editar-perfil.component.css
+++ b/Frontend/src/app/components/editar-perfil/editar-perfil.component.css
@@ -38,8 +38,21 @@ h3::before {
 h3::before {
     left: 25px;
 }
-img{
-    width: 10%;
+
+.input-info{
+    display: flex;
+    align-items: center;
+}
+
+.input-info img{
+    width: 132px;
+    height: 132px;
+    border: 2px solid #7F1F71;
+    border-radius: 50%;
+}
+
+#cambiar-foto{
+    margin-left: 2em;
 }
 
 .cambiar-datos {
@@ -50,23 +63,45 @@ img{
     padding-left: 3em;
 }
 .input-info p{
-    display: inline;
+    display: block;
+    font-size: 0.8em;
+    text-align: center;
+    margin-bottom: 0;
     margin-left: 3em;
+    margin-right: 5em;
 }
 
 label {
     font-weight: 700;
-    margin-right: 5em;
+    margin-right: 3.1em;
+    margin-left: 10.5em;
 }
 
 input {
     display: inline-block;
-    width: 35%;
+    width: 30%;
     height: 2em;
     margin: 0.5em;
+    padding: 10px;
     border: solid #7F1F71 1px;
     border-radius: 10px;
 }
+
+input.name{
+    width: 77%;
+}
+.label-name{
+    margin-right: 2.8em;
+}
+
+label.biografia{
+    margin-right: 2.8em;
+}
+
+.otro-margin{
+    margin-right: 1.7em;
+}
+
 #biografia{
     height: 4em;
 }
@@ -75,14 +110,13 @@ input {
     color: #7F1F71;
     font-weight: 700;
     margin-top: 20px;
+    margin-bottom: 10px;
     text-decoration: none;
 }
 
 button {
-    width: 30%;
-    padding: 8px;
-    padding-left: 25px;
-    padding-right: 25px;
+    width: 20%;
+    padding: 5px;
     border-radius: 10px;
     color: #ffff;
     background-color: #EC46A1;
