--- a/Frontend/src/app/components/editar-perfil/editar-perfil.component.html
+++ b/Frontend/src/app/components/editar-perfil/editar-perfil.component.html
@@ -38,7 +38,15 @@
         <input id="biografia">
     </div>
     <div class="opciones">
-        <a id="eliminar" href="#">Eliminar cuenta</a>
+        <a id="eliminar-cuenta">Eliminar cuenta</a>
+        <div class="modal-container" id="modal-container">
+            <div class="modal">
+                <p>¿Estás segur@ que quieres eliminar tu cuenta?</p>
+                <label>Colocar contraseña para confirmar</label>
+                <input>
+                <button id="eliminar">Eliminar</button>
+            </div>
+        </div>
         <button>Guardar</button>
     </div>
 </div>
