--- a/Frontend/src/app/components/header/header.component.css
+++ b/Frontend/src/app/components/header/header.component.css
@@ -58,3 +58,48 @@ h1 {
   margin-left: 49.41px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 510px){
+  h1{
+      font-size: 30px;
+      margin-left: 1em;
+  }
+}
+
+@media screen and (max-width: 404px){
+  h1{
+      font-size: 25px;
+  }
+
+  .right{
+    width: 35%;
+    margin-left: 0;
+  }
+  .right p{
+    font-size: 16px;
+    margin-top: 2px;
+  }
+}
+
+@media screen and (max-width: 374px){
+  .right img{
+    right: -32px;
+}
+.right p{
+  left: 26px;
+  font-size: 14px;
+}
+}
+
+@media screen and (max-width: 310px){
+  h1{
+    font-size: 20px;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 308px){
+  .right p{
+    left: 14px;
+  }
+}
