--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -4,8 +4,8 @@
         <img [src]="user.img" alt="foto-usuario">
     <div class="info-user">
     <h4>{{ user.firstName }} {{ user.lastName }}</h4>
-    <p>{{ ocupacion }}</p>
-    <p>{{ biografia }}</p>
+    <p>{{ occupation }}</p>
+    <p>{{ biography }}</p>
     <hr>
     <strong>6 Publicaciones</strong>
     <strong>165 Amigos</strong>
