--- a/Frontend/src/app/components/pages/home/home.component.html
+++ b/Frontend/src/app/components/pages/home/home.component.html
@@ -1,65 +1,42 @@
 <!-- Header -->
-<app-header [user]="currentUser"></app-header>
+<app-header></app-header>
 
-<!-- Post 1 -->
-<div class="posts-container">
-  <div class="posts">
-    <div class="post">
-      <img src="assets/images/avatar/lina.png" class="img-rounded" alt="" />
-      <p class="user">
-        <span class="name">Lina Grante</span> -
-        <small><span class="username">lina.gran</span></small
-        ><br />
-        <small>Dónde puedo encontrar este modelo de pulsera?</small>
-      </p>
-      <div class="elapsed">
-        <p><small>Hace 2h</small></p>
+<div class="container">
+  <!-- Post n -->
+  <div class="posts-container" *ngFor="let post of posts">
+    <div class="posts">
+      <div class="post">
+        <img
+          [src]="post?.postedBy[0].profilePicDownloadUrl"
+          class="img-rounded"
+          alt=""
+        />
+        <p class="user">
+          <span class="name">{{ post?.postedBy[0].fullName }}</span>
+          <!-- -
+          <small><span class="username">lina.gran</span></small
+          > --><br />
+          <small>{{ post?.description }}</small>
+        </p>
+        <div class="elapsed">
+          <p>
+            <small>{{ moment(post?.created).fromNow() }}</small>
+          </p>
+        </div>
       </div>
-    </div>
-    <img
-      src="assets/images/feed-inicio/nati-melnychuk-oO0JAOJhquk-unsplash.jpg"
-      class="post-image"
-      alt=""
-    />
-    <div class="actions">
-      <img src="assets/images/icons/up_arrow.png" alt="" class="arrow-up" />
-      <img src="assets/images/icons/down_arrow.png" alt="" class="arrow-down" />
-      <img src="assets/images/icons/chat1.png" alt="" class="chat-icon" />
-      <div class="favorites">
-        <span class="favorite-counter">15</span>
-        <img src="assets/images/icons/Favorite.png" alt="" />
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Post 2 -->
-<div class="posts-container">
-  <div class="posts">
-    <div class="post">
-      <img src="assets/images/avatar/joaquin.png" class="img-rounded" alt="" />
-      <p class="user">
-        <span class="name">Joaquín Lewis</span> -
-        <small><span class="username">joa.lw</span></small
-        ><br />
-        <small>Fotografía de producto</small>
-      </p>
-      <div class="elapsed">
-        <p><small>Hace 6h</small></p>
-      </div>
-    </div>
-    <img
-      src="assets/images/feed-inicio/danilo-capece-NoVnXXmDNi0-unsplash.jpg"
-      class="post-image"
-      alt=""
-    />
-    <div class="actions">
-      <img src="assets/images/icons/up_arrow.png" alt="" class="arrow-up" />
-      <img src="assets/images/icons/down_arrow.png" alt="" class="arrow-down" />
-      <img src="assets/images/icons/chat1.png" alt="" class="chat-icon" />
-      <div class="favorites">
-        <span class="favorite-counter">10</span>
-        <img src="assets/images/icons/Favorite.png" alt="" />
+      <img [src]="post?.image" class="post-image" alt="" />
+      <div class="actions">
+        <img src="assets/images/icons/up_arrow.png" alt="" class="arrow-up" />
+        <img
+          src="assets/images/icons/down_arrow.png"
+          alt=""
+          class="arrow-down"
+        />
+        <img src="assets/images/icons/chat1.png" alt="" class="chat-icon" />
+        <div class="favorites">
+          <span class="favorite-counter">15</span>
+          <img src="assets/images/icons/Favorite.png" alt="" />
+        </div>
       </div>
     </div>
   </div>
@@ -96,8 +73,8 @@
 
 <div
   class="crear-publicacion animate__animated animate__faster"
-  [ngClass]="{'animate__fadeInRight crear-visible': !oculto}"
+  [ngClass]="{ 'animate__fadeInRight crear-visible': !oculto }"
 >
   <button (click)="crearPublicacion()">Crear publicación</button>
-  <button>Editar perfil</button>
+  <button (click)="editarPerfil()">Editar perfil</button>
 </div>
