--- a/Frontend/src/app/components/session/login/login.component.html
+++ b/Frontend/src/app/components/session/login/login.component.html
@@ -15,13 +15,13 @@
           <h1>Fashion Hunter</h1>
           <p>La red social en la que tu estilo habla por vos</p>
           <div class="container">
-              <div class="row">
+              <!-- <div class="row">
                   <div class="col-md-6">
                       <button class="btn btn-success" id="google-button">
                           Iniciar Sesion con Google
                       </button>
                   </div>
-              </div>
+              </div> -->
               <h3> <i class="far fa-circle"></i> </h3>
           </div>
 
@@ -36,8 +36,8 @@
               </form>
               <h4>¿Olvidaste tu contraseña? <a [routerLink]="['/forget-password']">Click aquí</a></h4>
               <h4>¿No tenés cuenta? <a [routerLink]="['/crear-cuenta']">Crear cuenta</a></h4>
-                  <img src="assets/images/login/googlePlay.png" id="google">
-                  <img src="assets/images/login/appleStore.png" id="apple">
+                  <!-- <img src="assets/images/login/googlePlay.png" id="google">
+                  <img src="assets/images/login/appleStore.png" id="apple"> -->
                   <hr/>
                   <div class="instagram">
                   <i class="fab fa-instagram"></i><h4> @fashionhunter_arg</h4>
