--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -16,7 +16,7 @@
   --other-color-3: #afa9a9;
   --primary-font: "Pacifico", cursive;
   --secondary-font: "Open Sans", sans-serif;
-  --background-color: #e5e5e5;
+  --background-color: #FAFFFE;
 }
 html, body { height: 100%; }
 body {
